--- a/release-tools/travis.yml
+++ b/release-tools/travis.yml
@@ -7,9 +7,13 @@ git:
 matrix:
   include:
   - go: 1.13.3
+    arch: amd64
+  - go: 1.13.3
+    arch: s390x
+    
 before_script:
 - mkdir -p bin
-- wget https://github.com/golang/dep/releases/download/v0.5.1/dep-linux-amd64 -O bin/dep
+- wget https://github.com/golang/dep/releases/download/v0.5.1/dep-linux-${HOSTTYPE} -O bin/dep
 - chmod u+x bin/dep
 - export PATH=$PWD/bin:$PATH
 script:
