--- a/release-tools/travis.yml
+++ b/release-tools/travis.yml
@@ -13,7 +13,7 @@ matrix:
     
 before_script:
 - mkdir -p bin
-- wget https://github.com/golang/dep/releases/download/v0.5.1/dep-linux-${HOSTTYPE} -O bin/dep
+- wget https://github.com/golang/dep/releases/download/v0.5.1/dep-linux-$(uname -m) -O bin/dep
 - chmod u+x bin/dep
 - export PATH=$PWD/bin:$PATH
 script:
